src/objects/Technical_Test__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Technical Tests</relationshipLabel>
        <relationshipName>Technical_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seniority__c</fullName>
        <label>Seniority</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Techincal_Question__c</fullName>
        <label>Techincal Question</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Technical Test</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Technical Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>